updated first ep on top

--- a/index.html
+++ b/index.html
@@ -26,16 +26,8 @@
     <!-- START MAIN BODY SECTION -->
     <section class="body">
       <div class="row" style="margin: 0%; height: 100%">
-        <!-- <div class="col-md-4 col-sm-12 order-md-2 sideContainer" style="min-height: 25vh;margin-bottom: 5%;"> -->
-        <div class="col-md-4 col-sm-12 sideContainer" style="min-height: 25vh;margin-bottom: 5%;">
-          <div class="card" style="background-color: #8659a8; color: white;margin:0 0 1.5% 0;">
-            <div class="card-body">
-              <h3>A couple of Besties with a lot to talk about and endless follow up questions. Join us to find out what the actual FUQs are!</h3>
-            </div>
-          </div>
-        </div>
-        <!-- <div class="col-md-8 col-sm-12 order-md-1 mainContainer"> -->
-        <div class="col-md-8 col-sm-12 mainContainer">
+        
+        <div class="col-md-8 col-sm-12 order-md-2 mainContainer">
           <!-- <div class="card" style="background-color: #0c8281; color: white;margin:0px 2.5; height: 100%"> -->
             <!-- <div class="card-body"> -->
               <!-- comment to push code -->
@@ -48,6 +40,14 @@
  
             <!-- </div> -->
           <!-- </div> -->
+        </div>
+
+        <div class="col-md-4 col-sm-12 order-md-1 sideContainer" style="min-height: 25vh;margin-bottom: 5%;">
+          <div class="card" style="background-color: #8659a8; color: white;margin:0 0 1.5% 0;">
+            <div class="card-body">
+              <h3>A couple of Besties with a lot to talk about and endless follow up questions. Join us to find out what the actual FUQs are!</h3>
+            </div>
+          </div>
         </div>
       </div>
     </section>
